--- a/references/zotero.bib
+++ b/references/zotero.bib
@@ -35,6 +35,23 @@
   file = {/Users/yuyang/Zotero/storage/KBA9WGX8/Devlin et al. - 2019 - BERT Pre-training of Deep Bidirectional Transformers for Language Understanding.pdf;/Users/yuyang/Zotero/storage/YRJWTXZ3/1810.html}
 }
 
+@online{CogViewMasteringTexttoImage2021ding,
+  title = {{{CogView}}: {{Mastering Text-to-Image Generation}} via {{Transformers}}},
+  shorttitle = {{{CogView}}},
+  author = {Ding, Ming and Yang, Zhuoyi and Hong, Wenyi and Zheng, Wendi and Zhou, Chang and Yin, Da and Lin, Junyang and Zou, Xu and Shao, Zhou and Yang, Hongxia and Tang, Jie},
+  date = {2021-11-05},
+  eprint = {2105.13290},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2105.13290},
+  url = {http://arxiv.org/abs/2105.13290},
+  urldate = {2025-08-25},
+  abstract = {Text-to-Image generation in the general domain has long been an open problem, which requires both a powerful generative model and cross-modal understanding. We propose CogView, a 4-billion-parameter Transformer with VQ-VAE tokenizer to advance this problem. We also demonstrate the finetuning strategies for various downstream tasks, e.g. style learning, super-resolution, text-image ranking and fashion design, and methods to stabilize pretraining, e.g. eliminating NaN losses. CogView achieves the state-of-the-art FID on the blurred MS COCO dataset, outperforming previous GAN-based models and a recent similar work DALL-E.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning},
+  file = {/Users/yuyang/Zotero/storage/K9XU64ER/Ding et al. - 2021 - CogView Mastering Text-to-Image Generation via Transformers.pdf;/Users/yuyang/Zotero/storage/BND3IYLG/2105.html}
+}
+
 @online{DeepSeekV2StrongEconomical2024deepseek-ai,
   title = {{{DeepSeek-V2}}: {{A Strong}}, {{Economical}}, and {{Efficient Mixture-of-Experts Language Model}}},
   shorttitle = {{{DeepSeek-V2}}},
@@ -51,6 +68,24 @@
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language},
   annotation = {TLDR: Evaluation results show that, even with only 21B activated parameters, DeepSeek-V2 and its chat versions still achieve top-tier performance among open-source models.},
   file = {/Users/yuyang/Zotero/storage/8M3WUW45/DeepSeek-AI et al. - 2024 - DeepSeek-V2 A Strong, Economical, and Efficient Mixture-of-Experts Language Model.pdf;/Users/yuyang/Zotero/storage/3J9KX4I6/2405.html}
+}
+
+@online{DeepSeekV2StrongEconomical2024deepseek-aia,
+  title = {{{DeepSeek-V2}}: {{A Strong}}, {{Economical}}, and {{Efficient Mixture-of-Experts Language Model}}},
+  shorttitle = {{{DeepSeek-V2}}},
+  author = {DeepSeek-AI and Liu, Aixin and Feng, Bei and Wang, Bin and Wang, Bingxuan and Liu, Bo and Zhao, Chenggang and Dengr, Chengqi and Ruan, Chong and Dai, Damai and Guo, Daya and Yang, Dejian and Chen, Deli and Ji, Dongjie and Li, Erhang and Lin, Fangyun and Luo, Fuli and Hao, Guangbo and Chen, Guanting and Li, Guowei and Zhang, H. and Xu, Hanwei and Yang, Hao and Zhang, Haowei and Ding, Honghui and Xin, Huajian and Gao, Huazuo and Li, Hui and Qu, Hui and Cai, J. L. and Liang, Jian and Guo, Jianzhong and Ni, Jiaqi and Li, Jiashi and Chen, Jin and Yuan, Jingyang and Qiu, Junjie and Song, Junxiao and Dong, Kai and Gao, Kaige and Guan, Kang and Wang, Lean and Zhang, Lecong and Xu, Lei and Xia, Leyi and Zhao, Liang and Zhang, Liyue and Li, Meng and Wang, Miaojun and Zhang, Mingchuan and Zhang, Minghua and Tang, Minghui and Li, Mingming and Tian, Ning and Huang, Panpan and Wang, Peiyi and Zhang, Peng and Zhu, Qihao and Chen, Qinyu and Du, Qiushi and Chen, R. J. and Jin, R. L. and Ge, Ruiqi and Pan, Ruizhe and Xu, Runxin and Chen, Ruyi and Li, S. S. and Lu, Shanghao and Zhou, Shangyan and Chen, Shanhuang and Wu, Shaoqing and Ye, Shengfeng and Ma, Shirong and Wang, Shiyu and Zhou, Shuang and Yu, Shuiping and Zhou, Shunfeng and Zheng, Size and Wang, T. and Pei, Tian and Yuan, Tian and Sun, Tianyu and Xiao, W. L. and Zeng, Wangding and An, Wei and Liu, Wen and Liang, Wenfeng and Gao, Wenjun and Zhang, Wentao and Li, X. Q. and Jin, Xiangyue and Wang, Xianzu and Bi, Xiao and Liu, Xiaodong and Wang, Xiaohan and Shen, Xiaojin and Chen, Xiaokang and Chen, Xiaosha and Nie, Xiaotao and Sun, Xiaowen and Wang, Xiaoxiang and Liu, Xin and Xie, Xin and Yu, Xingkai and Song, Xinnan and Zhou, Xinyi and Yang, Xinyu and Lu, Xuan and Su, Xuecheng and Wu, Y. and Li, Y. K. and Wei, Y. X. and Zhu, Y. X. and Xu, Yanhong and Huang, Yanping and Li, Yao and Zhao, Yao and Sun, Yaofeng and Li, Yaohui and Wang, Yaohui and Zheng, Yi and Zhang, Yichao and Xiong, Yiliang and Zhao, Yilong and He, Ying and Tang, Ying and Piao, Yishi and Dong, Yixin and Tan, Yixuan and Liu, Yiyuan and Wang, Yongji and Guo, Yongqiang and Zhu, Yuchen and Wang, Yuduan and Zou, Yuheng and Zha, Yukun and Ma, Yunxian and Yan, Yuting and You, Yuxiang and Liu, Yuxuan and Ren, Z. Z. and Ren, Zehui and Sha, Zhangli and Fu, Zhe and Huang, Zhen and Zhang, Zhen and Xie, Zhenda and Hao, Zhewen and Shao, Zhihong and Wen, Zhiniu and Xu, Zhipeng and Zhang, Zhongyu and Li, Zhuoshu and Wang, Zihan and Gu, Zihui and Li, Zilin and Xie, Ziwei},
+  date = {2024-06-19},
+  eprint = {2405.04434},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2405.04434},
+  url = {http://arxiv.org/abs/2405.04434},
+  urldate = {2025-08-26},
+  abstract = {We present DeepSeek-V2, a strong Mixture-of-Experts (MoE) language model characterized by economical training and efficient inference. It comprises 236B total parameters, of which 21B are activated for each token, and supports a context length of 128K tokens. DeepSeek-V2 adopts innovative architectures including Multi-head Latent Attention (MLA) and DeepSeekMoE. MLA guarantees efficient inference through significantly compressing the Key-Value (KV) cache into a latent vector, while DeepSeekMoE enables training strong models at an economical cost through sparse computation. Compared with DeepSeek 67B, DeepSeek-V2 achieves significantly stronger performance, and meanwhile saves 42.5\% of training costs, reduces the KV cache by 93.3\%, and boosts the maximum generation throughput to 5.76 times. We pretrain DeepSeek-V2 on a high-quality and multi-source corpus consisting of 8.1T tokens, and further perform Supervised Fine-Tuning (SFT) and Reinforcement Learning (RL) to fully unlock its potential. Evaluation results show that, even with only 21B activated parameters, DeepSeek-V2 and its chat versions still achieve top-tier performance among open-source models.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language},
+  annotation = {TLDR: Evaluation results show that, even with only 21B activated parameters, DeepSeek-V2 and its chat versions still achieve top-tier performance among open-source models.},
+  file = {/Users/yuyang/Zotero/storage/LPZ85IA8/DeepSeek-AI et al. - 2024 - DeepSeek-V2 A Strong, Economical, and Efficient Mixture-of-Experts Language Model.pdf;/Users/yuyang/Zotero/storage/FKVV652D/2405.html}
 }
 
 @online{DeepSpeedExtremescaleModel2020hagen,
@@ -182,12 +217,46 @@
   file = {/Users/yuyang/Zotero/storage/ZYF5TGBG/Lipman et al. - 2023 - Flow Matching for Generative Modeling.pdf;/Users/yuyang/Zotero/storage/X4UW8EXQ/2210.html}
 }
 
+@online{GeneratingLongSequences2019child,
+  title = {Generating {{Long Sequences}} with {{Sparse Transformers}}},
+  author = {Child, Rewon and Gray, Scott and Radford, Alec and Sutskever, Ilya},
+  date = {2019-04-23},
+  eprint = {1904.10509},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.1904.10509},
+  url = {http://arxiv.org/abs/1904.10509},
+  urldate = {2025-08-26},
+  abstract = {Transformers are powerful sequence models, but require time and memory that grows quadratically with the sequence length. In this paper we introduce sparse factorizations of the attention matrix which reduce this to \$O(n \textbackslash sqrt\{n\})\$. We also introduce a) a variation on architecture and initialization to train deeper networks, b) the recomputation of attention matrices to save memory, and c) fast attention kernels for training. We call networks with these changes Sparse Transformers, and show they can model sequences tens of thousands of timesteps long using hundreds of layers. We use the same architecture to model images, audio, and text from raw bytes, setting a new state of the art for density modeling of Enwik8, CIFAR-10, and ImageNet-64. We generate unconditional samples that demonstrate global coherence and great diversity, and show it is possible in principle to use self-attention to model sequences of length one million or more.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Machine Learning,Statistics - Machine Learning},
+  file = {/Users/yuyang/Zotero/storage/PM6TUQKQ/Child et al. - 2019 - Generating Long Sequences with Sparse Transformers.pdf;/Users/yuyang/Zotero/storage/AZ56FEX2/1904.html}
+}
+
 @article{GenerativePretrainingPixelschen,
   title = {Generative {{Pretraining}} from {{Pixels}}},
   author = {Chen, Mark and Radford, Alec and Child, Rewon and Wu, Jeff and Jun, Heewoo and Dhariwal, Prafulla and Luan, David and Sutskever, Ilya},
   abstract = {Inspired by progress in unsupervised representation learning for natural language, we examine whether similar models can learn useful representations for images. We train a sequence Transformer to auto-regressively predict pixels, without incorporating knowledge of the 2D input structure. Despite training on low-resolution ImageNet without labels, we find that a GPT-2 scale model learns strong image representations as measured by linear probing, fine-tuning, and low-data classification. On CIFAR-10, we achieve 96.3\% accuracy with a linear probe, outperforming a supervised Wide ResNet, and 99.0\% accuracy with full finetuning, matching the top supervised pre-trained models. An even larger model trained on a mixture of ImageNet and web images is competitive with self-supervised benchmarks on ImageNet, achieving 72.0\% top-1 accuracy on a linear probe of our features.},
   langid = {english},
   file = {/Users/yuyang/Zotero/storage/6QSQX7W6/Chen et al. - Generative Pretraining from Pixels.pdf}
+}
+
+@online{GQATrainingGeneralized2023ainslie,
+  title = {{{GQA}}: {{Training Generalized Multi-Query Transformer Models}} from {{Multi-Head Checkpoints}}},
+  shorttitle = {{{GQA}}},
+  author = {Ainslie, Joshua and Lee-Thorp, James and family=Jong, given=Michiel, prefix=de, useprefix=false and Zemlyanskiy, Yury and Lebrón, Federico and Sanghai, Sumit},
+  date = {2023-12-23},
+  eprint = {2305.13245},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2305.13245},
+  url = {http://arxiv.org/abs/2305.13245},
+  urldate = {2025-08-25},
+  abstract = {Multi-query attention (MQA), which only uses a single key-value head, drastically speeds up decoder inference. However, MQA can lead to quality degradation, and moreover it may not be desirable to train a separate model just for faster inference. We (1) propose a recipe for uptraining existing multi-head language model checkpoints into models with MQA using 5\% of original pre-training compute, and (2) introduce grouped-query attention (GQA), a generalization of multi-query attention which uses an intermediate (more than one, less than number of query heads) number of key-value heads. We show that uptrained GQA achieves quality close to multi-head attention with comparable speed to MQA.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning},
+  annotation = {TLDR: This work proposes a recipe for uptraining existing multi-head language model checkpoints into models with MQA using 5\% of original pre-training compute, and introduces grouped-query attention (GQA), a generalization of multi- query attention which uses an intermediate number of query heads.},
+  file = {/Users/yuyang/Zotero/storage/27RHXXQU/Ainslie et al. - 2023 - GQA Training Generalized Multi-Query Transformer Models from Multi-Head Checkpoints.pdf;/Users/yuyang/Zotero/storage/J2MUWURN/2305.html}
 }
 
 @online{ImageWorth16x162021dosovitskiy,
@@ -215,6 +284,22 @@
   langid = {english},
   keywords = {100-Papers},
   file = {/Users/yuyang/Zotero/storage/34P3SJ2N/Radford et al. - Language Models are Unsupervised Multitask Learners.pdf}
+}
+
+@online{LayerNormalization2016ba,
+  title = {Layer {{Normalization}}},
+  author = {Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E.},
+  date = {2016-07-21},
+  eprint = {1607.06450},
+  eprinttype = {arXiv},
+  eprintclass = {stat},
+  doi = {10.48550/arXiv.1607.06450},
+  url = {http://arxiv.org/abs/1607.06450},
+  urldate = {2025-08-25},
+  abstract = {Training state-of-the-art, deep neural networks is computationally expensive. One way to reduce the training time is to normalize the activities of the neurons. A recently introduced technique called batch normalization uses the distribution of the summed input to a neuron over a mini-batch of training cases to compute a mean and variance which are then used to normalize the summed input to that neuron on each training case. This significantly reduces the training time in feed-forward neural networks. However, the effect of batch normalization is dependent on the mini-batch size and it is not obvious how to apply it to recurrent neural networks. In this paper, we transpose batch normalization into layer normalization by computing the mean and variance used for normalization from all of the summed inputs to the neurons in a layer on a single training case. Like batch normalization, we also give each neuron its own adaptive bias and gain which are applied after the normalization but before the non-linearity. Unlike batch normalization, layer normalization performs exactly the same computation at training and test times. It is also straightforward to apply to recurrent neural networks by computing the normalization statistics separately at each time step. Layer normalization is very effective at stabilizing the hidden state dynamics in recurrent networks. Empirically, we show that layer normalization can substantially reduce the training time compared with previously published techniques.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Machine Learning,Statistics - Machine Learning},
+  file = {/Users/yuyang/Zotero/storage/ZVQUBAE2/Ba et al. - 2016 - Layer Normalization.pdf;/Users/yuyang/Zotero/storage/WHJVNHVE/1607.html}
 }
 
 @online{LayerNormalizationTransformer2020xiong,
@@ -264,6 +349,24 @@
   pubstate = {prepublished},
   keywords = {Computer Science - Machine Learning,Statistics - Machine Learning},
   file = {/Users/yuyang/Zotero/storage/BMPW2LP2/Wang et al. - 2020 - Linformer Self-Attention with Linear Complexity.pdf;/Users/yuyang/Zotero/storage/HD8KKLTY/2006.html}
+}
+
+@online{LongformerLongDocumentTransformer2020beltagy,
+  title = {Longformer: {{The Long-Document Transformer}}},
+  shorttitle = {Longformer},
+  author = {Beltagy, Iz and Peters, Matthew E. and Cohan, Arman},
+  date = {2020-12-02},
+  eprint = {2004.05150},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2004.05150},
+  url = {http://arxiv.org/abs/2004.05150},
+  urldate = {2025-08-25},
+  abstract = {Transformer-based models are unable to process long sequences due to their self-attention operation, which scales quadratically with the sequence length. To address this limitation, we introduce the Longformer with an attention mechanism that scales linearly with sequence length, making it easy to process documents of thousands of tokens or longer. Longformer's attention mechanism is a drop-in replacement for the standard self-attention and combines a local windowed attention with a task motivated global attention. Following prior work on long-sequence transformers, we evaluate Longformer on character-level language modeling and achieve state-of-the-art results on text8 and enwik8. In contrast to most prior work, we also pretrain Longformer and finetune it on a variety of downstream tasks. Our pretrained Longformer consistently outperforms RoBERTa on long document tasks and sets new state-of-the-art results on WikiHop and TriviaQA. We finally introduce the Longformer-Encoder-Decoder (LED), a Longformer variant for supporting long document generative sequence-to-sequence tasks, and demonstrate its effectiveness on the arXiv summarization dataset.},
+  pubstate = {prepublished},
+  version = {2},
+  keywords = {Computer Science - Computation and Language},
+  file = {/Users/yuyang/Zotero/storage/2XJP6ULP/Beltagy et al. - 2020 - Longformer The Long-Document Transformer.pdf;/Users/yuyang/Zotero/storage/M3R9445K/2004.html}
 }
 
 @online{MixedPrecisionTraining2018micikevicius,
@@ -349,6 +452,22 @@
   file = {/Users/yuyang/Zotero/storage/TDAVRIBB/Su et al. - 2023 - RoFormer Enhanced Transformer with Rotary Position Embedding.pdf;/Users/yuyang/Zotero/storage/JGJ4USKV/2104.html}
 }
 
+@online{RootMeanSquare2019zhang,
+  title = {Root {{Mean Square Layer Normalization}}},
+  author = {Zhang, Biao and Sennrich, Rico},
+  date = {2019-10-16},
+  eprint = {1910.07467},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.1910.07467},
+  url = {http://arxiv.org/abs/1910.07467},
+  urldate = {2025-08-25},
+  abstract = {Layer normalization (LayerNorm) has been successfully applied to various deep neural networks to help stabilize training and boost model convergence because of its capability in handling re-centering and re-scaling of both inputs and weight matrix. However, the computational overhead introduced by LayerNorm makes these improvements expensive and significantly slows the underlying network, e.g. RNN in particular. In this paper, we hypothesize that re-centering invariance in LayerNorm is dispensable and propose root mean square layer normalization, or RMSNorm. RMSNorm regularizes the summed inputs to a neuron in one layer according to root mean square (RMS), giving the model re-scaling invariance property and implicit learning rate adaptation ability. RMSNorm is computationally simpler and thus more efficient than LayerNorm. We also present partial RMSNorm, or pRMSNorm where the RMS is estimated from p\% of the summed inputs without breaking the above properties. Extensive experiments on several tasks using diverse network architectures show that RMSNorm achieves comparable performance against LayerNorm but reduces the running time by 7\%\textasciitilde 64\% on different models. Source code is available at https://github.com/bzhangGo/rmsnorm.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,Statistics - Machine Learning},
+  file = {/Users/yuyang/Zotero/storage/CT48ZMIA/Zhang and Sennrich - 2019 - Root Mean Square Layer Normalization.pdf;/Users/yuyang/Zotero/storage/HWIWMDXS/1910.html}
+}
+
 @online{RT2VisionLanguageActionModels2023brohan,
   title = {{{RT-2}}: {{Vision-Language-Action Models Transfer Web Knowledge}} to {{Robotic Control}}},
   shorttitle = {{{RT-2}}},
@@ -414,6 +533,40 @@
   pubstate = {prepublished},
   keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning},
   file = {/Users/yuyang/Zotero/storage/MWKKI7Z7/Wang et al. - 2025 - Test-Time Scaling with Reflective Generative Model.pdf;/Users/yuyang/Zotero/storage/MXDUEI5K/2507.html}
+}
+
+@online{TrainShortTest2022press,
+  title = {Train {{Short}}, {{Test Long}}: {{Attention}} with {{Linear Biases Enables Input Length Extrapolation}}},
+  shorttitle = {Train {{Short}}, {{Test Long}}},
+  author = {Press, Ofir and Smith, Noah A. and Lewis, Mike},
+  date = {2022-04-22},
+  eprint = {2108.12409},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2108.12409},
+  url = {http://arxiv.org/abs/2108.12409},
+  urldate = {2025-08-26},
+  abstract = {Since the introduction of the transformer model by Vaswani et al. (2017), a fundamental question has yet to be answered: how does a model achieve extrapolation at inference time for sequences that are longer than it saw during training? We first show that extrapolation can be enabled by simply changing the position representation method, though we find that current methods do not allow for efficient extrapolation. We therefore introduce a simpler and more efficient position method, Attention with Linear Biases (ALiBi). ALiBi does not add positional embeddings to word embeddings; instead, it biases query-key attention scores with a penalty that is proportional to their distance. We show that this method trains a 1.3 billion parameter model on input sequences of length 1024 that extrapolates to input sequences of length 2048, achieving the same perplexity as a sinusoidal position embedding model trained on inputs of length 2048 but training 11\% faster and using 11\% less memory. ALiBi's inductive bias towards recency also leads it to outperform multiple strong position methods on the WikiText-103 benchmark.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computation and Language},
+  file = {/Users/yuyang/Zotero/storage/EIM45YC4/Press et al. - 2022 - Train Short, Test Long Attention with Linear Biases Enables Input Length Extrapolation.pdf;/Users/yuyang/Zotero/storage/VMBJNP6A/2108.html}
+}
+
+@online{TransformerXLAttentiveLanguage2019dai,
+  title = {Transformer-{{XL}}: {{Attentive Language Models Beyond}} a {{Fixed-Length Context}}},
+  shorttitle = {Transformer-{{XL}}},
+  author = {Dai, Zihang and Yang, Zhilin and Yang, Yiming and Carbonell, Jaime and Le, Quoc V. and Salakhutdinov, Ruslan},
+  date = {2019-06-02},
+  eprint = {1901.02860},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.1901.02860},
+  url = {http://arxiv.org/abs/1901.02860},
+  urldate = {2025-08-26},
+  abstract = {Transformers have a potential of learning longer-term dependency, but are limited by a fixed-length context in the setting of language modeling. We propose a novel neural architecture Transformer-XL that enables learning dependency beyond a fixed length without disrupting temporal coherence. It consists of a segment-level recurrence mechanism and a novel positional encoding scheme. Our method not only enables capturing longer-term dependency, but also resolves the context fragmentation problem. As a result, Transformer-XL learns dependency that is 80\% longer than RNNs and 450\% longer than vanilla Transformers, achieves better performance on both short and long sequences, and is up to 1,800+ times faster than vanilla Transformers during evaluation. Notably, we improve the state-of-the-art results of bpc/perplexity to 0.99 on enwiki8, 1.08 on text8, 18.3 on WikiText-103, 21.8 on One Billion Word, and 54.5 on Penn Treebank (without finetuning). When trained only on WikiText-103, Transformer-XL manages to generate reasonably coherent, novel text articles with thousands of tokens. Our code, pretrained models, and hyperparameters are available in both Tensorflow and PyTorch.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,Statistics - Machine Learning},
+  file = {/Users/yuyang/Zotero/storage/SERAKKKC/Dai et al. - 2019 - Transformer-XL Attentive Language Models Beyond a Fixed-Length Context.pdf;/Users/yuyang/Zotero/storage/X5DMCR76/1901.html}
 }
 
 @online{UsingOutputEmbedding2017press,
